--- a/public/shop/css/style.css
+++ b/public/shop/css/style.css
@@ -2320,3 +2320,37 @@ word-break: break-all;
   text-align: center;
   font-weight: bold;
 }
+
+.noticeBox {
+	height: 100%;
+    width: 100%;
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+}
+.noticeBox  img{
+    width: 80%;
+    margin: 1.5rem auto;
+    display: block;
+}
+.noticeBox a{
+	width: 100%;
+    display: block;
+    height: 25%;
+    position: absolute;
+    top: 52%;
+
+}
+.noticeBg{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 2000;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+}
